# librarything_to_barcode_label

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
src/: items.rs  main.rs  renderer.rs
templates/: labels.html
