[package]
name = "librarything_to_barcode_label"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
barcoders = { version = "1.0.2", features = ["svg"] }
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
csv = "1"
askama = "0.10"
clap = "2"
structopt = "0.3"
encoding_rs = "0.8"
encoding_rs_io = "0.1"